bootstrap:main page category products carousel placeholder

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     </section>
   </header>
   <main class="container-fluid">
-    <section class="row">
 
-      <!-- top category info -->
+    <!-- top category info -->
+    <section class="row">
       <div class="container-fluid p-0">
         <div class="jumbotron mt-5 mb-0" style="text-align: center;">
           <h1>ZATTIX</h1>
@@ -93,7 +93,9 @@
         </div>
       </div>
       <!-- carousel -->
-
+    </section>
+    <!-- carousel -->
+    <section class="row">
       <div data-ride="carousel pt-5" class="carousel slide px-md-5 text-center carousel-" id="carousel-1">
         <div class="carousel-inner">
           <span class="sr-only">Photo by <a
@@ -181,13 +183,35 @@
         </ol>
       </div>
     </section>
+    <!-- main products section -->
+    <section class="container-fluid">
+      <div class="row">
 
+
+        <div class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <!-- product one -->
+            </div>
+            <div class="carousel-item">
+              <!-- product two -->
+            </div>
+
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+
+      </div>
+    </section>
   </main>
-
-
-
-
-
 
   <!-- bootstrap js scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
