main:products grid responsive layout using bootstrap

--- a/index.html
+++ b/index.html
@@ -185,32 +185,12 @@
     </section>
     <!-- main products section -->
     <section class="container-fluid">
-      <div class="row">
-
-
-        <div class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <!-- product one -->
-            </div>
-            <div class="carousel-item">
-              <!-- product two -->
-            </div>
-
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-lg-4">
 
       </div>
+
     </section>
+
   </main>
 
   <!-- bootstrap js scripts -->
