--- a/index.html
+++ b/index.html
@@ -185,7 +185,87 @@
     </section>
     <!-- main products section -->
     <section class="container-fluid">
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-lg-4">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 align-content-center">
+        <div class="product-card">
+          <img src="./assets/piano-1.jpg" alt="piano">
+          <h3>Piano</h3>
+          <p>New</p>
+          <p>Fromz San Francisco, US</p>
+          <div class="d-flex justify-content-between">
+            <button>+</button>
+            <button>1380$</button>
+          </div>
+        </div>
+        <div class="product-card">
+          <img src="./assets/piano-1.jpg" alt="piano">
+          <h3>Piano</h3>
+          <p>New</p>
+          <p>Fromz San Francisco, US</p>
+          <div class="d-flex justify-content-between">
+            <button>+</button>
+            <button>1380$</button>
+          </div>
+        </div>
+        <div class="product-card">
+          <img src="./assets/piano-1.jpg" alt="piano">
+          <h3>Piano</h3>
+          <p>New</p>
+          <p>Fromz San Francisco, US</p>
+          <div class="d-flex justify-content-between">
+            <button>+</button>
+            <button>1380$</button>
+          </div>
+        </div>
+        <div class="product-card">
+          <img src="./assets/piano-1.jpg" alt="piano">
+          <h3>Piano</h3>
+          <p>New</p>
+          <p>Fromz San Francisco, US</p>
+          <div class="d-flex justify-content-between">
+            <button>+</button>
+            <button>1380$</button>
+          </div>
+        </div>
+        <div class="product-card d-none d-lg-block">
+          <img src="./assets/piano-1.jpg" alt="piano">
+          <h3>Piano</h3>
+          <p>New</p>
+          <p>Fromz San Francisco, US</p>
+          <div class="d-flex justify-content-between">
+            <button>+</button>
+            <button>1380$</button>
+          </div>
+        </div>
+        <div class="product-card d-none d-lg-block">
+          <img src="./assets/piano-1.jpg" alt="piano">
+          <h3>Piano</h3>
+          <p>New</p>
+          <p>Fromz San Francisco, US</p>
+          <div class="d-flex justify-content-between">
+            <button>+</button>
+            <button>1380$</button>
+          </div>
+        </div>
+        <div class="product-card d-none d-xl-block">
+          <img src="./assets/piano-1.jpg" alt="piano">
+          <h3>Piano</h3>
+          <p>New</p>
+          <p>Fromz San Francisco, US</p>
+          <div class="d-flex justify-content-between">
+            <button>+</button>
+            <button>1380$</button>
+          </div>
+        </div>
+        <div class="product-card d-none d-xl-block">
+          <img src="./assets/piano-1.jpg" alt="piano">
+          <h3>Piano</h3>
+          <p>New</p>
+          <p>Fromz San Francisco, US</p>
+          <div class="d-flex justify-content-between">
+            <button>+</button>
+            <button>1380$</button>
+          </div>
+        </div>
 
       </div>
 
