--- a/index.html
+++ b/index.html
@@ -461,6 +461,16 @@
     </section>
 
   </main>
+  <footer class="container-fluid">
+    <div class="row row-cols-1 row-cols-lg-4">
+      <section>
+        <img src="./assets/logo.svg" alt="">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores nobis voluptatum blanditiis ipsa ut
+          dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat sed
+          vero nostrum at!</p>
+      </section>
+    </div>
+  </footer>
 
   <!-- bootstrap js scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
