footer: categories section markup

--- a/index.html
+++ b/index.html
@@ -469,6 +469,31 @@
           dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat sed
           vero nostrum at!</p>
       </section>
+      <section>
+        <h5>Categoris</h5>
+        <div class="d-flex">
+          <div>
+            <ul>
+              <li>Piano</li>
+              <li>Piano</li>
+              <li>Piano</li>
+              <li>Piano</li>
+              <li>Piano</li>
+              <li>Piano</li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li>Piano</li>
+              <li>Piano</li>
+              <li>Piano</li>
+              <li>Piano</li>
+              <li>Piano</li>
+              <li>Piano</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </div>
   </footer>
 
