footer:nav links in footer markup

--- a/index.html
+++ b/index.html
@@ -494,6 +494,20 @@
           </div>
         </div>
       </section>
+      <section>
+        <div>
+          <ul>
+            <li>Home</li>
+            <li>Cart</li>
+            <li>My Account</li>
+            <li>Orders</li>
+            <li>FAQ</li>
+            <li>Terms and Conditions</li>
+            <li>Contact Us</li>
+            <li>License</li>
+          </ul>
+        </div>
+      </section>
     </div>
   </footer>
 
