--- a/index.html
+++ b/index.html
@@ -508,6 +508,28 @@
           </ul>
         </div>
       </section>
+      <section>
+        <form action="#">
+          <div>
+            <label for="country">
+              COUNTRY
+            </label>
+            <input type="text" id="country">
+          </div>
+          <div>
+            <label for="language">
+              LANGUAGE
+            </label>
+            <input type="text" id="language">
+          </div>
+          <div>
+            <label for="currency">
+              CURRENCY
+            </label>
+            <input type="text" id="currency">
+          </div>
+        </form>
+      </section>
     </div>
   </footer>
 
