footer:logo height and width fix to small image

--- a/index.html
+++ b/index.html
@@ -514,19 +514,19 @@
             <label for="country">
               COUNTRY
             </label>
-            <input type="text" id="country">
+            <input type="text" id="country" placeholder="India">
           </div>
           <div>
             <label for="language">
               LANGUAGE
             </label>
-            <input type="text" id="language">
+            <input type="text" id="language" placeholder="English">
           </div>
           <div>
             <label for="currency">
               CURRENCY
             </label>
-            <input type="text" id="currency">
+            <input type="text" id="currency" placeholder="$ Dollar">
           </div>
         </form>
       </section>
