footer:list stle none and form data layout proper alignment

--- a/index.html
+++ b/index.html
@@ -463,13 +463,16 @@
   </main>
   <footer class="container-fluid">
     <div class="row row-cols-1 row-cols-lg-4">
-      <section>
+      <div>
         <img src="./assets/logo.svg" alt="">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores nobis voluptatum blanditiis ipsa ut
-          dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat sed
+        <p class=d-inline>ZATTIX</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores nobis voluptatum blanditiis ipsa
+          ut
+          dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat
+          sed
           vero nostrum at!</p>
-      </section>
-      <section>
+      </div>
+      <div>
         <h5>Categoris</h5>
         <div class="d-flex">
           <div>
@@ -493,8 +496,8 @@
             </ul>
           </div>
         </div>
-      </section>
-      <section>
+      </div>
+      <div>
         <div>
           <ul>
             <li>Home</li>
@@ -507,29 +510,27 @@
             <li>License</li>
           </ul>
         </div>
-      </section>
-      <section>
-        <form action="#">
+      </div>
+      <div>
+        <form action="#" class="d-flex">
           <div>
             <label for="country">
               COUNTRY
             </label>
-            <input type="text" id="country" placeholder="India">
-          </div>
-          <div>
             <label for="language">
               LANGUAGE
             </label>
-            <input type="text" id="language" placeholder="English">
-          </div>
-          <div>
             <label for="currency">
               CURRENCY
             </label>
+          </div>
+          <div>
+            <input type="text" id="country" placeholder="India">
+            <input type="text" id="language" placeholder="English">
             <input type="text" id="currency" placeholder="$ Dollar">
           </div>
         </form>
-      </section>
+      </div>
     </div>
   </footer>
 
