footer: copyright information

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </section>
     <!-- carousel -->
     <section class="row">
-      <div data-ride="carousel pt-5" class="carousel slide px-md-5 text-center carousel-" id="carousel-1">
+      <div data-ride="carousel pt-5" class="carousel slide px-md-5 carousel-" id="carousel-1">
         <div class="carousel-inner">
           <span class="sr-only">Photo by <a
               href="https://unsplash.com/@migueldominguez?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Miguel
@@ -532,6 +532,18 @@
         </form>
       </div>
     </div>
+    <nav>
+      <div>
+        <ul class="d-flex flex-nowrap">
+          <li>Zattix.com</li>
+          <li>Created by Samrood Ali</li>
+          <li>Microver Project</li>
+          <li>Copyright</li>
+          <li>All Rights Reserved By Mohammed Awad</li>
+        </ul>
+      </div>
+
+    </nav>
   </footer>
 
   <!-- bootstrap js scripts -->
