footer:social media icons

--- a/index.html
+++ b/index.html
@@ -532,9 +532,9 @@
         </form>
       </div>
     </div>
-    <nav>
+    <div class="d-md-flex justify-content-between">
       <div>
-        <ul class="d-flex flex-nowrap">
+        <ul class="d-md-flex flex-nowrap">
           <li>Zattix.com</li>
           <li>Created by Samrood Ali</li>
           <li>Microver Project</li>
@@ -542,8 +542,14 @@
           <li>All Rights Reserved By Mohammed Awad</li>
         </ul>
       </div>
-
-    </nav>
+      <div>
+        <i class="fab  red fa-facebook"></i>
+        <i class="fab  red fa-twitter"></i>
+        <i class="fab  red fa-linkedin"></i>
+        <i class="fab  red fa-instagram"></i>
+        <i class="fab  red fa-tumblr"></i>
+      </div>
+    </div>
   </footer>
 
   <!-- bootstrap js scripts -->
