common elements imported to search page

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
       </div>
     </nav>
     <!-- section for md to large screens -->
-    <section>
-    </section>
+    <div>
+    </div>
   </header>
   <main class="container-fluid">
 
     <!-- top category info -->
-    <section class="row">
+    <div class="row">
       <div class="container-fluid p-0">
         <div class="jumbotron mt-5 mb-0" style="text-align: center;">
           <h1>ZATTIX</h1>
@@ -87,13 +87,12 @@
               </div>
             </div>
             <input type="search" placeholder="What are you searching for ?" />
-            <input type="search" placeholder="Enter tags" />
-            <button class="bg-charcoal text-light" type="button">Button</button>
+            <a href="search.html" class="btn btn-dark bg-charcoal text-light">Search</a>
           </div>
         </div>
       </div>
       <!-- carousel -->
-    </section>
+    </div>
     <!-- carousel -->
     <section class="row">
       <div data-ride="carousel pt-5" class="carousel slide px-md-5 carousel-" id="carousel-1">
