search-page:filter search options

--- a/search.html
+++ b/search.html
@@ -95,6 +95,40 @@
                 </div>
             </div>
         </div>
+        <!-- search page query -->
+        <div class="search-main">
+            <div>
+                <div>
+                    <h3>Condition</h3>
+                    <input type="checkbox" id="used" name="used" value="used">
+                    <label for="used"> Used</label>
+                    <input type="checkbox" id="new" name="new" value="new">
+                    <label for="new"> New</label>
+                </div>
+                <div>
+                    <div>
+                        <h3>category</h3>
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Dropdown button
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" href="#">Piano</a>
+                                <a class="dropdown-item" href="#">Violin</a>
+                                <a class="dropdown-item" href="#">Drums</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div>
+
+                    </div>
+                </div>
+
+
+
+
     </main>
     <!-- footer -->
     <footer class="container-fluid">
