--- a/search.html
+++ b/search.html
@@ -96,27 +96,173 @@
     <!-- search page query -->
     <div class="search-main">
       <div>
-        <h3>Condition</h3>
-        <input type="checkbox" id="used" name="used" value="used">
-        <label for="used"> Used</label>
-        <input type="checkbox" id="new" name="new" value="new">
-        <label for="new"> New</label>
-      </div>
-      <div>
-        <h3>category</h3>
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Dropdown button
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Piano</a>
-            <a class="dropdown-item" href="#">Violin</a>
-            <a class="dropdown-item" href="#">Drums</a>
+        <div>
+          <h3>Condition</h3>
+          <input type="checkbox" id="used" name="used" value="used">
+          <label for="used"> Used</label>
+          <input type="checkbox" id="new" name="new" value="new">
+          <label for="new"> New</label>
+        </div>
+        <div>
+          <h3>category</h3>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown button
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Piano</a>
+              <a class="dropdown-item" href="#">Violin</a>
+              <a class="dropdown-item" href="#">Drums</a>
+            </div>
           </div>
         </div>
       </div>
       <div class="search-queries">
+        <div class="d-flex">
+          <img src="./assets/piano-1.jpg" alt="">
+          <div>
+            <h4>Piano</h4>
+            <p>New</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
+              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
+              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
+            </p>
+            <p>From San fransisco</p>
+            <div>
+              <button>+</button>
+              <button>5500$</button>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex">
+          <img src="./assets/piano-1.jpg" alt="">
+          <div>
+            <h4>Piano</h4>
+            <p>New</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
+              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
+              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
+            </p>
+            <p>From San fransisco</p>
+            <div>
+              <button>+</button>
+              <button>5500$</button>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex">
+          <img src="./assets/piano-1.jpg" alt="">
+          <div>
+            <h4>Piano</h4>
+            <p>New</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
+              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
+              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
+            </p>
+            <p>From San fransisco</p>
+            <div>
+              <button>+</button>
+              <button>5500$</button>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex">
+          <img src="./assets/piano-1.jpg" alt="">
+          <div>
+            <h4>Piano</h4>
+            <p>New</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
+              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
+              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
+            </p>
+            <p>From San fransisco</p>
+            <div>
+              <button>+</button>
+              <button>5500$</button>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex">
+          <img src="./assets/piano-1.jpg" alt="">
+          <div>
+            <h4>Piano</h4>
+            <p>New</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
+              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
+              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
+            </p>
+            <p>From San fransisco</p>
+            <div>
+              <button>+</button>
+              <button>5500$</button>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex">
+          <img src="./assets/piano-1.jpg" alt="">
+          <div>
+            <h4>Piano</h4>
+            <p>New</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
+              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
+              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
+            </p>
+            <p>From San fransisco</p>
+            <div>
+              <button>+</button>
+              <button>5500$</button>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex">
+          <img src="./assets/piano-1.jpg" alt="">
+          <div>
+            <h4>Piano</h4>
+            <p>New</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
+              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
+              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
+            </p>
+            <p>From San fransisco</p>
+            <div>
+              <button>+</button>
+              <button>5500$</button>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex">
+          <img src="./assets/piano-1.jpg" alt="">
+          <div>
+            <h4>Piano</h4>
+            <p>New</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
+              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
+              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
+            </p>
+            <p>From San fransisco</p>
+            <div>
+              <button>+</button>
+              <button>5500$</button>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex">
+          <img src="./assets/piano-1.jpg" alt="">
+          <div>
+            <h4>Piano</h4>
+            <p>New</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit unde, similique modi
+              ad nihil ullam, minus corporis officia, harum necessitatibus molestiae
+              exercitationem obcaecati asperiores eos. Corporis magni omnis animi necessitatibus.
+            </p>
+            <p>From San fransisco</p>
+            <div>
+              <button>+</button>
+              <button>5500$</button>
+            </div>
+          </div>
+        </div>
         <div class="d-flex">
           <img src="./assets/piano-1.jpg" alt="">
           <div>
