linked search back to home page

--- a/search.html
+++ b/search.html
@@ -103,7 +103,7 @@
           <input type="checkbox" id="new" name="new" value="new">
           <label for="new"> New</label>
         </div>
-        <div>
+        <div>s
           <h3>category</h3>
           <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
@@ -327,7 +327,9 @@
       <div>
         <div>
           <ul>
-            <li>Home</li>
+            <a href="index.html">
+              <li>Home</li>
+            </a>
             <li>Cart</li>
             <li>My Account</li>
             <li>Orders</li>
