--- a/search.html
+++ b/search.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse justify-content-between" id="navcol">
         <!-- nav bar center items -->
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" href="#"><i class="fa fa-home red"></i>&nbsp;<span
+          <li class="nav-item"><a class="nav-link active" href="index.html"><i class="fa fa-home red"></i>&nbsp;<span
                 class="red">HOME</span></a></li>
           <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown"
               href="#"><i class="fa fa-th grey"></i>&nbsp;<span class="grey">Collections</span>&nbsp;</a>
