fix:stray character s found in html of search page

--- a/search.html
+++ b/search.html
@@ -103,7 +103,7 @@
           <input type="checkbox" id="new" name="new" value="new">
           <label for="new"> New</label>
         </div>
-        <div>s
+        <div>
           <h3>category</h3>
           <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
