--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
           <h1 class="text-light">ZATTIX</h1>
           <p>Buying and Selling could not be simpler than this</p>
           <div class="row row-cols-1 row-cols-md-4 justify-content-center">
-            <div class="dropdown d-inline"><button class="btn dropdown-toggle bg-light w-100" aria-expanded="false"
-                data-toggle="dropdown bg-light" type="button">All Dssepartments </button>
+            <div class="dropdown d-inline jumbotron-element"><button class="btn dropdown-toggle bg-light w-100"
+                aria-expanded="false" data-toggle="dropdown bg-light" type="button">All Dssepartments </button>
               <!-- drop down -->
               <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item"
                   href="#">Second
                   Item</a><a class="dropdown-item" href="#">Third Item</a>
               </div>
             </div>
-            <input type="search" placeholder="What are you searching for ?" class="border-light" />
-            <a href="search.html" class="btn btn-dark bg-charcoal text-light">Search</a>
+            <input type="search" placeholder="What are you searching for ?" class="border-light jumbotron-element" />
+            <a href="search.html" class="btn btn-dark bg-charcoal text-light jumbotron-element">Search</a>
           </div>
         </div>
       </div>
