style:image path fix for the carousel slide 1

--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
             <div class="dropdown d-inline jumbotron-element"><button class="btn dropdown-toggle bg-light w-100"
                 aria-expanded="false" data-toggle="dropdown bg-light" type="button">All Dssepartments </button>
               <!-- drop down -->
-              <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item"
-                  href="#">Second
-                  Item</a><a class="dropdown-item" href="#">Third Item</a>
+              <div class="dropdown-menu"><a class="dropdown-item" href="#">Piano</a><a class="dropdown-item"
+                  href="#">Guitar</a><a class="dropdown-item" href="#">Drums</a>
               </div>
             </div>
             <input type="search" placeholder="What are you searching for ?" class="border-light jumbotron-element" />
@@ -95,18 +94,13 @@
     </div>
     <!-- carousel -->
     <section class="row">
-      <div data-ride="carousel pt-5" class="carousel slide px-md-5 carousel-" id="carousel-1">
+      <div data-ride="carousel pt-5" class="carousel-main carousel slide px-md-5 carousel-" id="carousel-1">
         <div class="carousel-inner">
-          <span class="sr-only">Photo by <a
-              href="https://unsplash.com/@migueldominguez?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Miguel
-              Dominguez</a> on <a
-              href="https://unsplash.com/s/photos/piano?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
-
           <!-- slide 1 -->
-          <div class="carousel-item slide active pt-5">
-            <div class="d-md-flex mx-auto m-md-5 px-md-3">
+          <div class="carousel-item active">
+            <div class="d-md-flex mx-auto">
               <div>
-                <img src="./assets/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
+                <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img">
                 <span class="sr-only">Photo by <a
                     href="https://unsplash.com/@migueldominguez?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Miguel
